<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_5sdp"
    android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0sdp"
        android:layout_weight="1"
        android:elevation="@dimen/_7sdp"
        app:cardCornerRadius="0sp">

        <ImageView
            android:id="@+id/imgMovieDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5sp"
        app:cardCornerRadius="3sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/load_color"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3sp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtMovieName"
                    android:layout_width="@dimen/_0sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="Big Shot" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3sp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/genre_s"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtMovieGenres"
                    android:layout_width="@dimen/_0sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="Drarma" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3sp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/budget"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtMovieBudget"
                    android:layout_width="@dimen/_0sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="63000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3sp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/production_country_s"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtProductionCountries"
                    android:layout_width="@dimen/_0sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="UnitedStates" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3sp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/original_language"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtMovieOriginalLanguage"
                    android:layout_width="@dimen/_0sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="English " />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3sp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/spoken_language_s"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtMovieSpokenLanguages"
                    android:layout_width="@dimen/_0sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="English " />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3sp"
                    android:text="@string/running_time"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtMovieTime"
                    android:layout_width="@dimen/_0sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="97 minutes " />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3sp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/release_date"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txtMovieReleaseDate"
                    android:layout_width="@dimen/_0sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_1994_12_21"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3sp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:text="@string/vote_average"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txtMovieVoteAverage"
                    android:layout_width="@dimen/_0sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_6_70"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtMovieOverview"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    tools:text="Big Shot Big ShotBig ShotBig ShotBig ShotBig ShotBig ShotvBig ShotBig ShotBig ShotBig Shot" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>