<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/_7sdp">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0sp"
        android:elevation="@dimen/_7sdp">
<ImageView
    android:id="@+id/imgMovie"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_400sdp"
    android:scaleType="fitXY"
    android:adjustViewBounds ="true" />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3sp"
        android:elevation="5sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/load_color"
            android:padding="@dimen/_10sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_mobile"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginRight="3sp"
           android:text="Name:"/>
        <TextView
        android:id="@+id/txtMovieName"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/iran_sans_mobile"
            android:textColor="@color/black"
            android:textSize="15sp"
        tools:text="Big Shot"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_mobile"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginRight="3sp"
            android:text="Release Date:"/>
        <TextView
            android:id="@+id/txtMovieReleaseDate"
            android:layout_width="@dimen/_0sdp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/_1994_12_21"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_mobile"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginRight="3sp"
            android:text="@string/vote_average"/>
        <TextView
            android:id="@+id/txtMovieVoteAverage"
            android:layout_width="@dimen/_0sdp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/_6_70"
            />
        </LinearLayout>
            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/iran_sans_mobile"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="12sp"-->
<!--            android:layout_marginRight="3sp"-->
<!--            android:text="Overview:"/>-->

                <TextView
                    android:id="@+id/txtMovieOverview"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    tools:text="@string/long_text" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>